A little more about history.

--- a/history.tex
+++ b/history.tex
@@ -560,8 +560,20 @@ See \cref{sub:fisher} for more details about the technique.
 
 \paragraph{Shannon's information theory}
 
-The field was originally established by the works of Harry Nyquist and Ralph Hartley, in
-the 1920s, and Claude Shannon in the 1940s.
+The field, that studies quantification, storage and communication of information, was
+originally established by the works of Harry Nyquist (1889 -- 1976) and Ralph Hartley
+(1888 -- 1970) in the 1920s, and Claude Shannon (1916 -- 2001) in the 1940s.
+Information theory brought many important concepts to the field of data analysis, such as
+entropy, mutual information, and information gain.
+
+\paragraph{K-Nearest Neighbors}
+
+In 1951, Evelyn Fix (1904 -- 1965) and Joseph Lawson Hodges Jr. (1922 -- 2000) wrote a
+technical report entitled ``Discriminatory Analysis, Nonparametric Discrimination:
+Consistency Properties.''  In this paper, they proposed the k-nearest neighbors algorithm,
+which is a non-parametric method used for classification and regression.
+
+See \cref{sub:knn} for more details about the technique.
 
 \paragraph{Rosenblatt's perceptron}
 
@@ -572,15 +584,13 @@ tasks such as the logical operations AND and OR.
 
 See \cref{sub:perceptron} for more details about the technique.
 
-\paragraph{K-Nearest Neighbors}
-
-Evelyn Fix and Joseph Hodges in 1951 (discriminatory analysis)
-
-See \cref{sub:knn} for more details about the technique.
-
 \paragraph{Hunt inducing trees}
 
-1966
+In 1966, \citeauthor{Hunt1966}'s book\footfullcite{Hunt1966} described a way to induce decision trees from
+data.  The algorithm is based on the concept of information entropy and is a precursor of
+the \citeauthor{Quinlan1986}'s ID3 algorithm\footfullcite{Quinlan1986}.
+
+See \cref{sub:tree} fro more details about the technique.
 
 \paragraph{Empirical Risk Minimization Principle}
 
