--- a/references.bib
+++ b/references.bib
@@ -121,3 +121,19 @@
   publisher = {Springer-Verlag New York, Inc.},
   title = {The nature of statistical learning theory},
   year = 1995}
+
+@book{Hunt1966,
+  author = {Hunt, Earl B. and Marin, John and Stone, Philip J.},
+  title = {Experiments in Induction},
+  year = {1966},
+  publisher = {Academic Press},
+  address = {New York, NY, USA}}
+
+@article{Quinlan1986,
+  title={Induction of Decision Trees},
+  author={J. Ross Quinlan},
+  journal={Machine Learning},
+  year={1986},
+  volume={1},
+  pages={81-106},
+  url={https://api.semanticscholar.org/CorpusID:13252401}}
