--- a/references.bib
+++ b/references.bib
@@ -137,3 +137,74 @@
   volume={1},
   pages={81-106},
   url={https://api.semanticscholar.org/CorpusID:13252401}}
+
+@inproceedings{LeCun1986,
+  author={{Le Cun}, Yann},
+  title={Learning Process in an Asymmetric Threshold Network},
+  booktitle={Disordered Systems and Biological Organization},
+  year={1986},
+  publisher={Springer Berlin Heidelberg},
+  address={Berlin, Heidelberg},
+  pages={233--240},
+  isbn={978-3-642-82657-3}}
+
+@article{Rumelhart1986,
+  author = {Rumelhart, David E. and Hinton, Geoffrey E. and Williams, Ronald J.},
+  title = {Learning representations by back-propagating errors},
+  journal = {Nature},
+  volume = {323},
+  number = {6088},
+  pages = {533-536},
+  year = {1986},
+  doi = {10.1038/323533a0}}
+
+@article{Cortes1995,
+  author = {Cortes, Corinna and Vapnik, Vladimir},
+  title = {Support-vector networks},
+  journal = {Machine Learning},
+  volume = {20},
+  number = {3},
+  pages = {273-297},
+  year = {1995},
+  doi = {10.1007/BF00994018}}
+
+@article{Cover1965,
+  author={Cover, Thomas M.},
+  journal={IEEE Transactions on Electronic Computers},
+  title={Geometrical and Statistical Properties of Systems of Linear Inequalities with Applications in Pattern Recognition},
+  year={1965},
+  volume={EC-14},
+  number={3},
+  pages={326-334},
+  doi={10.1109/PGEC.1965.264137}}
+
+@article{Schapire1990,
+  author = {Schapire, Robert E.},
+  title = {The strength of weak learnability},
+  journal = {Machine Learning},
+  volume = {5},
+  number = {2},
+  pages = {197-227},
+  year = {1990},
+  doi = {10.1007/BF00116037}}
+
+@article{Breiman1996,
+  author = {Breiman, Leo},
+  title = {Bagging predictors},
+  journal = {Machine Learning},
+  volume = {24},
+  number = {2},
+  pages = {123-140},
+  year = {1996},
+  doi = {10.1007/BF00058655}}
+
+@inproceedings{Ho1995,
+  author={Tin Kam Ho},
+  booktitle={Proceedings of 3rd International Conference on Document Analysis and Recognition},
+  title={Random decision forests},
+  year={1995},
+  volume={1},
+  number={},
+  pages={278-282 vol.1},
+  keywords={Classification tree analysis;Decision trees;Training data;Optimization methods;Testing;Tin;Stochastic processes;Handwriting recognition;Hidden Markov models;Multilayer perceptrons},
+  doi={10.1109/ICDAR.1995.598994}}
