Added Don's quote.

--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -3,7 +3,7 @@
 
 \chapterprecishere{%
   ``Maar ik maak steeds wat ik nog niet kan om het te leeren kunnen.''\par\raggedleft---
-  \textup{Vincent van Gogh}, 1885}
+  \textup{Vincent van Gogh}, The Complete Letters of Vincent Van Gogh, Volume Three}
 
 Foundamental concepts in data science come from a variety of fields, including
 mathematics, statistics, computer science, optimization theory, and information theory.
