--- a/project.tex
+++ b/project.tex
@@ -1,5 +1,8 @@
 \chapter{Data science project}
 
+\chapterprecishere{``Figured I could throw myself a pity party or go back to school and
+learn the computers.'' \par\raggedleft--- \textup{Don Carlton}, Monsters University}
+
 First of all, a data science project is a software project.  The difference between a data
 science software and a traditional software is that some components of the former is
 constructed from data.  This means that part of the solution cannot be designed from the
