A few extra quotations just for fun.

--- a/inductive.tex
+++ b/inductive.tex
@@ -1,7 +1,7 @@
 \chapter{Statistical learning theory}
 
 \chapterprecishere{%
-  To  understand  God's  thoughts  we  must study statistics, for these are the measure of his purpose.
+  To  understand  God's  thoughts  we  must study statistics, for these are the measure of His purpose.
   \par\raggedleft--- \textup{Florence Nightingale}, her diary}
 
 Recommended reading: IEEE TRANSACTIONS ON NEURAL NETWORKS, VOL. 10, NO. 5, SEPTEMBER 1999
