--- a/main.tex
+++ b/main.tex
@@ -165,7 +165,10 @@ visit
 \input{data}
 \input{project}
 \input{inductive}
+\input{handling}
 \input{tasks}
+\input{evaluation}
+\input{ethics}
 
 \printbibliography
 
