--- a/tasks.tex
+++ b/tasks.tex
@@ -1,5 +1,9 @@
 \chapter{Machine learning tasks}
 
+\chapterprecishere{%
+  They say ``Na prática, a teoria é outra,'' I say ``Se sua teoria não funciona na
+  prática, ela está errada demais.''}
+
 In the previous chapter, we define two fundamental inductive learning tasks:
 \emph{classification} and \emph{regression}.  In real-world applications, however, we may
 require different tasks to solve our data science problem.  Descriptive learning tasks are
