--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,4 +1,6 @@
 \chapter{Model evaluation}
 
-\chapterprecishere{``It's dangerous to go alone! Take this.'' {\fontspec[Scale=2]{Symbola}\color{black!60}🗡}
+\chapterprecishere{%
+  {\fontspec[Scale=2]{Symbola}\color{black!80}\symbol{"1F5E1}}
+  It's dangerous to go alone! Take this.
   \par\raggedleft--- \textup{Unnamed Old Man}, The Legend of Zelda}
