--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -2,7 +2,7 @@
 \label{chap:preliminaries}
 
 \chapterprecishere{%
-  ``Maar ik maak steeds wat ik nog niet kan om het te leeren kunnen.''\par\raggedleft---
+  Maar ik maak steeds wat ik nog niet kan om het te leeren kunnen.\par\raggedleft---
   \textup{Vincent van Gogh}, The Complete Letters of Vincent Van Gogh, Volume Three}
 
 Foundamental concepts in data science come from a variety of fields, including
