--- a/handling.tex
+++ b/handling.tex
@@ -1,5 +1,5 @@
 \chapter{Data handling}
 
 \chapterprecishere{%
-  ``Tidy datasets are all alike, but every messy dataset is messy in its own way.''
+  Tidy datasets are all alike, but every messy dataset is messy in its own way.
   \par\raggedleft--- \textup{Hadley Wickham}, Tidy Data}
